# terrian_prototype

./: .clang  .gitignore  .gitmodules  .sconsign.dblite  .tags  .vim_session  .vimrc  CMakeLists.txt  Doxyfile  README.md  SConstruct  Terrian  build_from_tmux.sh  collision_notification_command.cpp  notes_heightmap_building_techniques.txt  notes_lua_multiple_scripts.md  run_from_tmux.sh  shader.frag  shader.vert  terrian_config.h.in  tests_from_tmux.sh
examples/: CMakeLists.txt  basic.cpp  bullet.cpp  bullet_collision.cpp  one.cpp  physics.cpp  rectangle.cpp
examples/bullet_integration/: CMakeLists.txt  bullet_integration.cpp  print_node.cpp  print_node.hpp
include/: .tags
include/glad/: .tags  glad.h
lua_scripts/: example_bullet.lua  hello.lua  scriptheightmap.lua  scriptheightmaptests.lua  scriptmanagertests.lua  test.lua  test.luac  triangle_drawing.lua  update.lua
luatests/: main.cpp
notes/: notes_Update & Draw cycle for polygons.txt  notes_heightmap_building_techniques.txt  notes_lua_internal_script_api.md
shaders/: shader.frag  shader.vert
src/: .tags  CMakeLists.txt  gladscratch.cpp  heightmap.cpp  line.cpp  luamain.cpp  main.cpp  matrixstacksingleton.cpp  polygon.cpp  stdlibscratch.cpp  visualcontext.cpp  window.cpp
src/headers/: .tags  GridGeometry.cpp  IArrayBufferBuilder.hpp  IDrawBuilder.hpp  INode.hpp  IPolygon.h  IPolygon.hpp  IVertexAttributeBuilder.hpp  RenderFactory.hpp  VisualServer.h  addtodrawqueue.hpp  arraybufferbuilder.hpp  bullet_contactmanifold_node.hpp  bullet_node.hpp  circle.hpp  gamefacade.h  gldebug.h  heightmap.h  heightmap.hpp  line.h  line.hpp  logiccontext.h  logiccontext.hpp  logicstate.h  matrixstacksingleton.hpp  node.hpp  polygon.h  polygon.hpp  rectangle.hpp  renderfactory.hpp  terrian_config.hpp  triangle.hpp  vertexattributebuilder.hpp  visualcontext.h  visualcontext.hpp  window.h
src/headers/collision/: AABB.h  AABB.hpp  INode.hpp  aabbcollider.hpp  collider.hpp  node.hpp  notification_command.hpp  plane.h  point.h  simpleworld.hpp  spherecollider.hpp
src/headers/dynamics/: dynamic_driver.hpp  dynamic_node.hpp
src/headers/facade/: line.h
src/headers/geometry/: line.h  moveable.hpp  point.hpp
src/headers/luae/: Utilities.h  Utilities.hpp  luae.hpp  script.hpp  scriptcollision.hpp  scriptheightmap.h  scriptheightmap.hpp  scriptmanager.h  scriptmanager.hpp  scriptmouse.hpp  scriptriangle.hpp  table.hpp
src/headers/patterns/: builder.hpp  command.hpp
src/src/: addtodrawqueue.cpp  arraybufferbuilder.cpp  arraybufferbuilt.cpp  bullet_contactmanifold_node.cpp  bullet_node.cpp  circle.cpp  collision_aabbcollider.cpp  collision_node.cpp  collision_simpleworld.cpp  collision_sphere.cpp  dynamic_driver.cpp  dynamic_node.cpp  geometry_moveable.cpp  glad.c  heightmap.cpp  line.cpp  matrixstacksingleton.cpp  node.cpp  polygon.cpp  rectangle.cpp  renderfactory.cpp  triangle.cpp  vertexattributebuilder.cpp  vertexattributebuilt.cpp  visualcontext.cpp  window.cpp
src/src/luae/: script.cpp  scriptcollision.cpp  scriptheightmap.cpp  scriptmanager.cpp  scriptmouse.cpp  scriptriangle.cpp
tests/: CMakeLists.txt  Collision_planetest.cpp  collision_compositetests.cpp  dynamicstests.cpp  geometry_moveable.cpp  heightmaptests.cpp  luaescriptmanagertest.cpp  luaescripttest.cpp  luaetabletest.cpp  luaeutilitiestest.cpp  matrixstacksingletontests.cpp  polygontests.cpp  renderfactorytests.cpp
